--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "phaser": "~2.4.4",
     "threejs": "*",
-    "jquery": "*"
+    "jquery": "*",
+    "jquery-circle-progress": "*"
   }
 }
